# Hikari

./: .gitignore  Cargo.toml  README.md  deny.toml  distribute.py  imgui.ini
crates/graphy/: Cargo.toml  imgui.ini
crates/graphy/crates/vk-sync-rs/: Cargo.toml
crates/graphy/examples/: pbr.rs  push_constants.rs  simplegraph.rs
crates/graphy/examples/common/: mod.rs
crates/graphy/examples/shaders/: fxaa.frag  pbr.frag  pbr.vert  push_constant.vert  screenSpaceQuad.vert
crates/graphy/shaders/: baseFragment.glsl  basicVertex.glsl  finalFragment.glsl  fxaa.frag  pbr.frag  pbr.vert  quad.frag  screen.frag  screenSpaceQuad.vert  testVertex.glsl
crates/graphy/src/: barrier.rs  buffer.rs  descriptor.rs  device.rs  gfx.rs  imgui_support.rs  lib.rs  swapchain.rs
crates/graphy/src/graph/: allocation.rs  command.rs  framebuffer.rs  mod.rs  node.rs  pipeline.rs  resources.rs  runtime.rs  storage.rs
crates/graphy/src/graph/command/: mod.rs  render.rs
crates/graphy/src/graph/pass/: mod.rs
crates/graphy/src/shader/: mod.rs  reflect.rs
crates/graphy/src/texture/: mod.rs  sampled_image.rs  texture2d.rs
crates/graphy/src/util/: arrayvec_copy.rs  cache_map.rs  intrusive_linked_list.rs  mod.rs  perframe.rs  temporary_map.rs
crates/hikari_3d/: Cargo.toml
crates/hikari_3d/src/: camera.rs  config.rs  cubemap.rs  effects.rs  environment.rs  error.rs  gltf.rs  image.rs  lib.rs  light.rs  material.rs  mesh.rs  mod.rs  primitives.rs  processing.rs  scene.rs  serialize.rs  shader.rs  texture.rs
crates/hikari_3d/src/old/: gltf.rs  image.rs  mesh.rs  mod.rs  scene.rs  texture.rs
crates/hikari_asset/: Cargo.toml  test.txt
crates/hikari_asset/benches/: bench.rs
crates/hikari_asset/src/: asset.rs  assets.rs  error.rs  gltf.rs  handle.rs  image.rs  io.rs  lib.rs  load.rs  manager.rs  material.rs  mesh.rs  meta.rs  path.rs  pool.rs  record.rs  save.rs  scene.rs  serde.rs  status.rs  texture.rs
crates/hikari_asset/src/handle/: erased.rs  mod.rs  raw.rs  typed.rs
crates/hikari_asset/src/serialize/: assetdb.rs  handle.rs  mod.rs
crates/hikari_asset/src/serialize/rkyv/: handle.rs  mod.rs
crates/hikari_asset/src/serialize/serde/: assetdb.rs  handle.rs  helpers.rs  mod.rs  record.rs
crates/hikari_asset_old/src/: Cargo.toml  asset.rs  assets.rs  handle.rs  manager.rs  meta.rs  mod.rs  path.rs  serde.rs
crates/hikari_core/: Cargo.toml
crates/hikari_core/src/: game.rs  game_state.rs  lib.rs  plugin.rs  time.rs  window.rs
crates/hikari_core/src/ecs/: component.rs  entity.rs  load_save.rs  mod.rs  registry.rs  scene.rs  serde.rs  serialize.rs  world.rs
crates/hikari_dev/: Cargo.toml
crates/hikari_dev/src/: lib.rs  profile.rs
crates/hikari_dev/src/profile/: mod.rs  noop.rs  optick_impl.rs  tracy_impl.rs
crates/hikari_imgui/: Cargo.toml
crates/hikari_imgui/src/: docking.rs  drag_and_drop.rs  drag_drop.rs  id.rs  internal.rs  internal_.rs  lib.rs  storage.rs  ui_func.rs  xyz_drag.rs
crates/hikari_imgui/src/gizmo/: draw.rs  math.rs  mod.rs  ray.rs  rotate.rs  scale.rs  subgizmo.rs  translate.rs
crates/hikari_input/: Cargo.toml
crates/hikari_input/src/: keyboard.rs  lib.rs  mouse.rs
crates/hikari_math/: Cargo.toml
crates/hikari_math/src/: lib.rs  transform.rs
crates/hikari_pbr/: Cargo.toml
crates/hikari_pbr/src/: common.rs  depth_prepass.rs  fxaa.rs  instancing.rs  lib.rs  light.rs  packet.rs  pbr.rs  resources.rs  settings.rs  util.rs  world.rs  world_renderer.rs
crates/hikari_pbr/src/passes/: debug.rs  depth_prepass.rs  fxaa.rs  mod.rs  pbr.rs  prepare.rs  shadow.rs
crates/hikari_py/: Cargo.toml  perf.data  perf.data.old  translate.py
crates/hikari_py/native/: Cargo.toml  pyproject.toml
crates/hikari_py/native/src/: lib.rs
crates/hikari_py/native/src/ecs/: entity.rs  mod.rs  script.rs
crates/hikari_py/src/: main.rs
crates/hikari_render/: 1  Cargo.toml  a.out  imgui.ini  quaternion_bullshit.c
crates/hikari_render/examples/: pbr.rs  push_constants.rs  simplegraph.rs
crates/hikari_render/examples/common/: mod.rs
crates/hikari_render/examples/shaders/: blue.frag  fxaa.frag  pbr.frag  pbr.vert  screen.frag  screenSpaceQuad.vert  triangle.vert
crates/hikari_render/shaders/: basicVertex.glsl  triangle.vert
crates/hikari_render/src/: barrier.rs  bindless.rs  buffer.rs  cache.rs  command.rs  delete.rs  descriptor.rs  device.rs  error.rs  framebuffer.rs  gfx.rs  imgui_support.rs  lib.rs  renderdoc.rs  renderpass.rs  swapchain.rs
crates/hikari_render/src/graph/: allocation.rs  args.rs  framebuffer.rs  mod.rs  resources.rs  runtime.rs  storage.rs
crates/hikari_render/src/image/: config.rs  mod.rs  raw.rs  sampled_image.rs  sampler.rs  view.rs
crates/hikari_render/src/shader/: mod.rs  reflect.rs
crates/hikari_render/src/texture/: mod.rs  sampled_image.rs
crates/hikari_render/src/util/: arrayvec_copy.rs  cache_map.rs  intrusive_linked_list.rs  mod.rs  temporary_map.rs
hikari_cli/: Cargo.toml
hikari_cli/src/: build.rs  config.rs  main.rs  new.rs  open.rs
hikari_editor/: Cargo.toml  build.rs  imgui.ini
hikari_editor/src/: components.rs  main.rs  world.rs
hikari_editor/src/component_impls/: camera.rs  environment.rs  light.rs  mesh_render.rs  meta.rs  mod.rs  transform.rs
hikari_editor/src/editor/: about.rs  assets.rs  camera.rs  components.rs  content_browser.rs  debugger.rs  font.rs  icons.rs  logging.rs  meta.rs  mod.rs  outliner.rs  project.rs  properties.rs  render_settings.rs  serialize.rs  style.rs  tools.rs  utils.rs  viewport.rs
hikari_editor/src/editor/asset_editors/: material.rs  mod.rs
hikari_editor/src/editor/component_impls/: camera.rs  light.rs  mesh_render.rs  mod.rs  transform.rs
hikari_editor/src/editor/windows/: about.rs  content_browser.rs  debugger.rs  editor_settings.rs  logging.rs  mod.rs  outliner.rs  project.rs  properties.rs  render_settings.rs  save_and_exit.rs  viewport.rs
hikari_editor/src/lib/: mod.rs  project.rs  scene.rs
hikari_editor/src/widgets/: asset_selector.rs  mod.rs  rename_input.rs
hikari_runtime/: Cargo.toml
hikari_runtime/src/: lib.rs  registry.rs  settings.rs
src/: lib.rs
(+169 files in other folders)
