[package]
name = "hikari"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
overflow-checks = false
debug = true
lto = true

[profile.dev]
opt-level = 1

[dependencies]
glfw = "0.41.0"
glam = "0.15.0"
cupid = "0.6.1"
rayon = "1.5.0"
downcast-rs = "1.2.0"
image = "0.23.12"
toml = "0.5.8"
lazy_static = "*"
rand = "*"
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = {version = "0.4.11" }
fern = { version = "0.6.0", features = ["colored"] }
crossterm = "*"
chrono = "0.4.19"
parking_lot="0.11.1"
atomic_refcell = "0.1.6"
hecs = "0.5.1"
gl = "0.14.0"

once_cell = "1.7.2"

graphy = {path ="crates/graphy" }
hikari-asset = {path = "crates/hikari_asset"}