[package]
name = "hikari"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "crates/hikari_core",
    "crates/hikari_systems",
    "crates/hikari_render",
    "crates/hikari_3d",
    "crates/hikari_pbr",
    "crates/hikari_py",
    "crates/hikari_asset",
    "crates/hikari_input",
    "crates/hikari_dev", 

    "hikari_editor",
    "hikari_cli"
]

[profile.release]
debug = true

[dependencies]
hikari_core = {path = "crates/hikari_core"}
hikari_systems = {path = "crates/hikari_systems"}
hikari_render = {path = "crates/hikari_render"}
hikari_3d = {path = "crates/hikari_3d"}
hikari_asset = {path = "crates/hikari_asset"}
hikari_dev = {path = "crates/hikari_dev"}
hikari_input = {path = "crates/hikari_input"}

[features]
release_unsafe = ["hikari_systems/thread_unsafety"]
