[package]
name = "hikari"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "crates/hikari_core",
    "crates/hikari_systems",
    "crates/hikari_render",
    "crates/hikari_3d",
    "crates/hikari_imgui",
    "crates/hikari_pbr",
    "crates/hikari_asset",
    "crates/hikari_input",
    "crates/hikari_dev", 
    "crates/hikari_path",
    "crates/hikari_imgui",
    "crates/hikari_utils",
    
    "hikari_editor",
    "hikari_cli",
    "hikari_runtime"
, "crates/hikari_handle"]

[profile.dev]
opt-level = 3

[dependencies]
hikari_core = {path = "crates/hikari_core"}
hikari_math = {path = "crates/hikari_math"}
hikari_systems = {path = "crates/hikari_systems"}
hikari_render = {path = "crates/hikari_render"}
hikari_3d = {path = "crates/hikari_3d"}
hikari_asset = {path = "crates/hikari_asset"}
hikari_dev = {path = "crates/hikari_dev"}
hikari_input = {path = "crates/hikari_input"}
hikari_pbr = {path = "crates/hikari_pbr"}
hikari_utils = {path = "crates/hikari_utils"}
hikari_imgui = {path = "crates/hikari_imgui", optional = true}

[features]
default = []
serde = ["hikari_core/serde", "hikari_math/serde", "hikari_3d/serde"]
release_unsafe = ["hikari_systems/thread_unsafety"]
profiling_tracy = ["hikari_dev/profiling_tracy"]
profiling_optick = ["hikari_dev/profiling_optick"]
aftermath = ["hikari_render/aftermath"]
imgui = ["hikari_imgui"]
imgui_serde = ["hikari_imgui/serde"]
editor = ["hikari_pbr/editor"]

[profile.dist]
inherits = "release"
lto = true
strip = true
panic = "abort"
