[package]
name = "hikari_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
which = "4.2.5"
fs_extra = "1"
anyhow = "1"
simple_logger = "2"
log = "0.4"

hikari_editor = {path = "../hikari_editor"}