[package]
name = "hikari_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hikari_editor"
path = "src/lib/mod.rs"

[dependencies]
hikari = {path = "../", features = ["editor", "profiling_enabled", "serde"]}
hikari_imgui = {path = "../crates/hikari_imgui"}
winit = "0.25.0"
log = {version = "^0.4"}
fern = {version = "0.6", features = ["colored"] }
flume = "0.10"
chrono = "0.4"
clipboard = "0.5.0"
anyhow = "1"
parking_lot = "0.12"
rfd = "0.9"
serde_yaml = "0.8"
serde = "1"
type-uuid = "0.1"

[features]
release_unsafe = ["hikari/release_unsafe"]
