[package]
name = "hikari_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hikari_editor"
path = "src/lib/mod.rs"

[dependencies]
hikari = {path = "../", features = ["editor", "imgui_serde", "profiling_tracy", "serde"]}
winit = "0.27"
log = {version = "^0.4"}
fern = {version = "0.6", features = ["colored"] }
flume = "0.10"
chrono = "0.4"
clipboard = "0.5"
anyhow = "1"
parking_lot = "0.12"
rfd = "0.10"
serde_yaml = "0.9"
serde = "1"
type-uuid = "0.1"
uuid = "1"

[build-dependencies]
fs_extra = "1"

[features]
release_unsafe = ["hikari/release_unsafe"]
aftermath = ["hikari/aftermath"]