[package]
name = "graphy"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[example]]
name = "simplegraph"

[dependencies]
thiserror = "1.0.24"
puffin = "0.12.1"
hikari-dev = {path = "../hikari_dev"}

log = { version = "0.4.14"}
crossterm = "0.19.0"

vec_map = "0.8.2"
glam = "0.15.0"
bitflags = "1.3.2"

ash = "0.35.0"
ash-window = "0.9.0"
winit = {version = "0.25.0", features = ["x11"] }
gpu-allocator = "0.14.0"
shaderc = "0.7"
spirv-reflect = "0.2.3"
parking_lot = "0.11.1"
const-cstr = "0.3.0"
lru = "0.7.0"
fxhash = {version = "0.2.1"}

arrayvec = "0.7.1"
bytemuck = "1.7.2"
simple_logger = "1.16.0"

vk-sync-fork = { git = "https://github.com/expenses/vk-sync-rs", rev = "c201a64"}

[dev-dependencies]
#hikari-asset = { path = "../hikari_asset"} 
scoped_threadpool = "0.1.9"
puffin_http = "0.9.0"
puffin = "0.12.1"

[profile.release]
debug = true


[features]
profile-tracy = ["hikari-dev/profile-tracy"]
profile-puffin = ["hikari-dev/profile-puffin"]