[package]
name = "hikari_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
gltf = "1"
serde = "1"
base64 = "0.13"
image = "0.24"
itertools = "0.10"
serde_yaml = "0.9"
rayon = "1"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
type-uuid = {version = "0.1"}

hikari_core = {path = "../hikari_core"}
hikari_asset = {path = "../hikari_asset"}
hikari_math = {path = "../hikari_math", features = ["serde"] }
hikari_render = {path = "../hikari_render"}

[dev-dependencies]
winit = "0.25"
simple_logger = "2"

[features]
default = []
serde = []