[package]
name = "hikari_asset"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
gltf = {version = "1"}
base64 = "0.13"
image = {version = "0.24", features = ["jpeg", "png", "jpeg_rayon", "hdr"]}
rayon = "1"
flume = "0.10"
itertools = "0.10"
parking_lot = "0.12"
anyhow = "1"
uuid = {version = "0.8", features = ["v4", "serde"] }
log = "0.4"
serde = "1"
serde_yaml = "0.8"
once_cell = "1"

hikari_core = {path = "../hikari_core"}
hikari_math = {path = "../hikari_math"}

[dev-dependencies]
rand = "0.8.3"
simple_logger = "2.0"
