[package]
name = "hikari_asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
anyhow = "1"
uuid = {version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
flume = "0.10"
rayon = "1"
log = "0.4"
once_cell = "1"
tempfile = "3"

[dev-dependencies]
simple_logger = "2"