[package]
name = "hikari_asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
anyhow = "1"
uuid = {version = "1", features = ["v4", "serde"] }
type-uuid = "0.1"
serde = { version = "1.0", optional = true }
rkyv = { version = "0.7", optional = true }
erased-serde = {version = "0.3", optional = true }
serde_yaml = {version = "0.9", optional = true }
flume = "0.10"
rayon = "1"
log = "0.4"
once_cell = "1"
rand = "0.8"
fxhash = "0.2"

hikari_handle = {path = "../hikari_handle"}

[features]
default = ["serde"]
serialize = ["serde/derive", "erased-serde", "serde_yaml", "rkyv"]

[dev-dependencies]
simple_logger = "2"