[package]
name = "hikari_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
log = "0.4"
hecs = "0.9"
rayon = "1"

serde = {version = "1", features = ["derive"], optional = true}
erased-serde = {version = "0.3", optional = true}
type-uuid = {version = "0.1", optional = true}
uuid = {version = "1", optional = true}

hikari_systems = {path = "../hikari_systems"}
hikari_dev = {path = "../hikari_dev"}
hikari_math = {path = "../hikari_math"}
hikari_asset = {path = "../hikari_asset"}

[features]
default = []
serde = ["hecs/row-serialize", "dep:serde", "erased-serde", "uuid", "type-uuid"]

[dev-dependencies]
serde_yaml = "0.9"