[package]
name = "hikari_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracy-client = {version = "0.13", features = ["ondemand"], optional = true}

[features]
default = ["tracy-client/ondemand"]
profiling_disabled = []
