[package]
name = "hikari_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracy-client = {version = "0.13", optional = true}
[features]
default = []
profiling_enabled = ["tracy-client/ondemand"]
