[package]
name = "hikari_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracy-client = {version = "0.14", optional = true}
optick = {version = "1.3", optional = true}
[features]
profiling_optick = ["optick"]
profiling_tracy = ["tracy-client/ondemand"]