[package]
name = "hikari_imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = {version = "0.9", features = ["docking", "tables-api"]}
imgui-rs-vulkan-renderer = { path = "../../../imgui-rs-vulkan-renderer", features = ["gpu-allocator"], optional=true }
imgui-winit-support = { version = "0.9", optional=true }
arrayvec = "0.7"
nohash-hasher = "0.2"
once_cell = "1"
parking_lot = "0.12"
fxhash = "0.2"

hikari_math = {path = "../hikari_math", features = ["mint"]}
hikari_dev = {path = "../hikari_dev"}
[features]
default = []
backend = ["imgui-rs-vulkan-renderer", "imgui-winit-support"]