[package]
name = "hikari_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2"

hikari_systems = {path = "../hikari_systems"}
hikari_core = {path = "../hikari_core"}
hikari_math = {path = "../hikari_math"}