[package]
name = "hikari_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.21"}
serde = {version = "1", optional = true}
type-uuid = {version = "0.1"}

[features]
default = []
serde = ["dep:serde", "glam/serde"]
mint = ["glam/mint"]
fast-math = ["glam/fast-math"]
