[package]
name = "hikari_pbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hikari_core = {path = "../hikari_core"}
hikari_systems = {path = "../hikari_systems"}
hikari_dev = {path = "../hikari_dev"}
hikari_math = {path = "../hikari_math"}
hikari_render = {path = "../hikari_render"}
hikari_3d = {path = "../hikari_3d"}
hikari_asset = {path = "../hikari_asset"}
winit = "0.27"

log = "0.4"
anyhow = "1"
rand = "0.8"

[features]
editor = []