[package]
name = "hikari_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.pyo3]
version = "0.15.1"
features = ["abi3-py310", "auto-initialize"]


[profile.release]
debug = true
lto = true

