[package]
name = "hikari_render"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[example]]
name = "simplegraph"

[dependencies]
thiserror = "1.0.24"
puffin = "0.12.1"
hikari_dev = {path = "../hikari_dev"}

log = { version = "0.4.14"}
crossterm = "0.19.0"


ash = "0.35.0"
ash-window = "0.9.0"
winit = {version = "0.25.0", features = ["x11"] }
gpu-allocator = "0.15.0"
shaderc = "0.7.3"
spirv-reflect = "0.2.3"
vk-sync-fork = { git = "https://github.com/expenses/vk-sync-rs", rev = "c201a64"}
const-cstr = "0.3.0"

vec_map = "0.8.2"
bitflags = "1.3.2"
parking_lot = "0.11.1"
lru = "0.7.0"
fxhash = {version = "0.2.1"}
ahash = "0.7.6"
arrayvec = "0.7.1"

imgui = {git = "https://github.com/Ax9D/imgui-docking-rs", features = ["freetype", "docking", "tables-api"], optional = true}
imgui-rs-vulkan-renderer = { git = "https://github.com/Ax9D/imgui-rs-vulkan-renderer-fork", features = ["gpu-allocator"], optional=true }
imgui-winit-support = { git = "https://github.com/Ax9D/imgui-docking-rs", optional=true }

[dev-dependencies]
simple_logger = "1.16.0"
hikari_asset = { path = "../hikari_asset"} 
hikari_3d = {path = "../hikari_3d"}
scoped_threadpool = "0.1.9"
puffin_http = "0.9.0"
puffin = "0.12.1"
glam = { version = "0.15.0", features = ["bytemuck"] }
itertools = "0.10"
rand = "0.8.4"
image = "0.23.14"

[features]
default = ["imgui-support"]
imgui-support = ["imgui", "imgui-winit-support", "imgui-rs-vulkan-renderer"]
profile-tracy = ["hikari_dev/profile-tracy"]
profile-puffin = ["hikari_dev/profile-puffin"]