[package]
name = "hikari_render"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[example]]
name = "simplegraph"

[dependencies]
thiserror = "1.0.24"
hikari_dev = {path = "../hikari_dev"}
hikari_core = {path = "../hikari_core"}

log = { version = "0.4"}
anyhow = "1.0"

ash = "=0.35.0"
ash-window = "=0.9.0"
winit = {version = "0.25.0", features = ["x11"] }
gpu-allocator = "0.15.0"
shaderc = "0.7.3"
spirv-reflect = "0.2.3"
vk-sync-fork = { git = "https://github.com/expenses/vk-sync-rs", rev = "c201a64"}
const-cstr = "0.3.0"

vec_map = "0.8"
bitflags = "1.3"
parking_lot = "0.12"
lru = "0.7"
fxhash = {version = "0.2.1"}
arrayvec = "0.7"

imgui = {git = "https://github.com/Ax9D/imgui-docking-rs", features = ["docking", "tables-api"], optional = true}
imgui-rs-vulkan-renderer = { git = "https://github.com/Ax9D/imgui-rs-vulkan-renderer", features = ["gpu-allocator"], optional=true }
imgui-winit-support = { git = "https://github.com/Ax9D/imgui-docking-rs", optional=true }

[dev-dependencies]
simple_logger = "2"
hikari_asset = { path = "../hikari_asset"} 
hikari_3d = {path = "../hikari_3d"}
hikari_math = {path = "../hikari_math"}
itertools = "0.10"
rand = "0.8.4"
image = "0.24"
rayon = "1"

[features]
default = ["imgui-support"]
imgui-support = []#["imgui", "imgui-winit-support", "imgui-rs-vulkan-renderer"]
