[package]
name = "hikari_render"
version = "0.1.0"
authors = ["atri <atrisarkar91@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[example]]
name = "simplegraph"

[dependencies]
hikari_dev = {path = "../hikari_dev"}
hikari_core = {path = "../hikari_core"}
hikari_imgui = {path = "../hikari_imgui", optional = true}
hikari_math = {path = "../hikari_math"}
thiserror = "1"
log = { version = "0.4"}
anyhow = "1.0"

ash = "0.37"
ash-window = "0.12"
raw-window-handle = "0.5"
winit = {version = "0.27", features = ["x11"] }
gpu-allocator = "0.22"
shaderc = "0.8"
spirv-reflect = "0.2.3"
vk-sync-fork = { version = "0.4"}
const-cstr = "0.3.0"
nvidia-aftermath-rs = {version = "0.0.2", optional = true }
renderdoc = { version= "0.10", optional = true }

vec_map = "0.8"
bitflags = "1.3"
parking_lot = "0.12"
lru = "0.7"
fxhash = {version = "0.2"}
arrayvec = "0.7"
once_cell = "1"

[dev-dependencies]
simple_logger = "2"
hikari_asset = { path = "../hikari_asset"} 
hikari_3d = {path = "../hikari_3d"}
hikari_math = {path = "../hikari_math"}
itertools = "0.10"
rand = "0.8"
image = "0.24"
rayon = "1"

[features]
default = ["imgui-support"]
imgui-support = ["hikari_imgui/backend"]
aftermath = ["nvidia-aftermath-rs"]
renderdoc = ["dep:renderdoc"]
