[package]
name = "distill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
flume = "0.10"
rayon = "1.5"
parking_lot = "0.12"
anyhow = "1"
uuid = {version = "0.8.2", features = ["v4", "serde"] }
once_cell = "1"
image = "0.24"

serde = {version = "1", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"
serde_yaml = "0.8"
log = "0.4"