[package]
name = "hikari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.16"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "multiple-pymethods"]